--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ p,h2{
     margin-top:auto; /*position of social media bar*/
     left:60px;
     margin-block-end: 0px;
+    margin-right: 5%;
     
 }
 
@@ -107,7 +108,8 @@ p,h2{
     position:fixed;
     bottom:0px;
     padding:0;
-    right:60px
+    right:60px;
+    margin-left: 5%;
 }
 
 .right::after{
@@ -127,14 +129,11 @@ p,h2{
 .index-image{
     height: 310px;
     width: 400px;
-    opacity: .7;
+    opacity: .9;
     float: right;
     margin-right: 150px;
     border-radius: 30px;    
 
-
-    
-    
 }
 .button {
     background-color: transparent; 
@@ -238,24 +237,24 @@ p,h2{
     height: 250px;
     width: 400px;
     margin: 10px;
-    /* min-height: 100px; */
     color: rgb(190, 241, 247);
     text-decoration: none;
     padding: 20px;
     display: inline-block;
-    font-weight: 600;
+    font-weight: 1000;
     font-size: 20px;
     letter-spacing: 1.5px;
     border-radius: 5px;
-   
+    transition: all .10s;
 }
 
 .standard-card:hover{
     background-color:  rgb(190, 241, 247);
-    color: rgb(25, 73, 79);
+    color: rgb(15, 46, 50);
     opacity: .8;
     font-weight: 600;
-          
+    box-shadow: 2px 10px 10px rgb(45, 97, 103);
+    transform: translateY(-5px);
 }
 
 .project-description{
